Update 103.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
@@ -19,23 +19,23 @@
 
 # Планировщик Linux
 
-Linux, как операционная система с вытеснительной многопроцессорной обработкой, реализует планировщик организующий очередь процессов. Точнее, планировщик также решает, какой *поток* в очереди будет выполняться - процесс может разветвляться на множество независимых потоков, но процесс и поток в этом контексте являются взаимозаменяемыми терминами. У каждого процесса есть две характеристики, которые влияют на его планирование: *политика планирования* и *приоритет планирования*.
+Linux, как операционная система с вытеснительной многопроцессорной обработкой, реализует планировщик, который организует очередь процессов. Точнее, планировщик также решает, какой *поток* в очереди будет выполняться - процесс может разветвляться на множество независимых потоков, но процесс и поток в этом контексте являются взаимозаменяемыми терминами. У каждого процесса есть две характеристики, которые влияют на его планирование: *политика планирования* и *приоритет планирования*.
 
-Существует два основных типа политик планирования: *политики реального времени* и *стандартные политики*. Процессы в рамках политики реального времени планируются напрямую по их значениям приоритета. Если более приоритетный процесс становится готовым к запуску, менее приоритетный процесс вытесняется, и процесс с более высоким приоритетом берет на себя управление ЦП. Процесс с более низким приоритетом получит управление ЦП, только если процессы с более высоким приоритетом простаивают или ждут ответа оборудования.
+Существует два основных типа политик планирования: *политики реального времени* и *стандартные политики*. Процессы в рамках политики реального времени управляются планировщиком напрямую по их значениям приоритета. Если более приоритетный процесс становится готовым к запуску, менее приоритетный процесс вытесняется, и процесс с более высоким приоритетом берет на себя управление CPU. Процесс с более низким приоритетом получит управление CPU, только если процессы с более высоким приоритетом простаивают или ждут ответа оборудования.
 
 Любой процесс реального-времени имеет более высокий приоритет, чем обычный процесс. Как операционная система общего назначения Linux выполняет всего несколько процессов в реальном времени. Большинство процессов, включая системные и пользовательские программы, выполняются в соответствии со стандартными политиками планирования. Обычные процессы восновном обладают одинаковым значением приоритета, но стандартные политики могут устанавливать правила приоритета выполнения, используя другую характеристику процесса: *фактор уступчивости*. Чтобы избежать путаницы с динамическими приоритетами, полученными от фактора уступчивости, приоритеты планирования обычно называются *статическими* приоритетами планирования.
 
-Планировщик Linux можно настроить по-разному, даже еще более сложными способами установки приоритетов, но эти общие концепции применимы всегда. При проверке и настройке планирования процессов важно помнить, что это повлияет только на процессы, выполняемые в рамках стандартной политики планирования.
+Планировщик Linux можно настроить по-разному и существут даже еще более сложные методы настройки приоритетов, но общие концепции применимы всегда. При проверке и настройке планирования процессов важно помнить, что это повлияет только на процессы, выполняемые в рамках стандартной политики планирования.
 
 ## Просмотр приоритетов
 
-Linux резервирует статические приоритеты в диапазоне от 0 до 99 для процессов реального времени, а нормальным процессам присваиваются статические приоритеты в диапазоне от 100 до 139, что означает, что для обычных процессов существует 39 различных уровней приоритета. Меньшие значения означают более высокий приоритет. Статический приоритет активного процесса можно найти в `sched` файле, расположенном в соответствующем каталоге внутри файловой системы `/proc`:
+В Linux для процессов реального времени зарезервированы статические приоритеты в диапазоне от 0 до 99, а нормальным процессам присваиваются статические приоритеты в диапазоне от 100 до 139, это означает, что для обычных процессов существует 39 различных уровней приоритета. Чем меньше значение тем более высокий приоритет. Статический приоритет активного процесса можно найти в `sched` файле, расположенном в соответствующем каталоге внутри файловой системы `/proc`:
 ```
 $ grep ^prio /proc/1/sched
 prio                   :       120
 ```
 
-Как показано в примере, строка, начинающаяся с `prio`, дает значение приоритета процесса (процесс `PID 1` - это процесс *init* или *systemd*, первый процесс, который ядро запускает во время инициализации системы). Стандартный приоритет для обычных процессов - `120`, поэтому его можно уменьшить до `100` или увеличить до `139`. Приоритеты всех запущенных процессов можно проверить с помощью команды `ps -Al` или `ps -el`:
+Как показано в примере, строка, начинающаяся с `prio`, дает значение приоритета процесса(процесс `PID 1` - это процесс *init* или *systemd*, первый процесс, который ядро запускает во время инициализации системы). Стандартный приоритет для обычных процессов - `120`, поэтому его можно уменьшить до `100` или увеличить до `139`. Приоритеты всех запущенных процессов можно проверить с помощью команды `ps -Al` или `ps -el`:
 ```console
 $ ps -el
 F S   UID   PID  PPID  C PRI  NI ADDR SZ WCHAN  TTY          TIME CMD
@@ -54,11 +54,11 @@ F S   UID   PID  PPID  C PRI  NI ADDR SZ WCHAN  TTY          TIME CMD
 0 R     0   392   280  0  80   0 -  7221 -      ?        00:00:00 ps
 ```
 
-Столбец `PRI` указывает статический приоритет, назначенный ядром. Однако обратите внимание, что значение приоритета, отображаемое `ps`, отличается от значения, полученного в предыдущем примере. По историческим причинам, приоритеты, отображаемые `ps`, по умолчанию находятся в диапазоне от `-40` до `99`, поэтому фактический приоритет получается добавлением к нему `40`(в частности, 80 + 40 = 120).
+Столбец `PRI` указывает статический приоритет, назначенный ядром. Однако обратите внимание, что значение приоритета, отображаемое `ps`, отличается от значения, полученного в предыдущем примере. По историческим причинам, приоритеты, отображаемые `ps`, по умолчанию находятся в диапазоне от -40 до 99, поэтому фактический приоритет получается добавлением к нему 40(в частности, 80 + 40 = 120).
 
-Также можно постоянно отслеживать процессы, которыми в настоящее время управляет ядро Linux, с помощью программы `top`. Как и в случае с `ps`, `top` также по-другому отображает значение приоритета. Чтобы упростить идентификацию процессов в реальном времени, `top` уменьшает значение приоритета на 100, тем самым делая все приоритеты в реальном времени отрицательными, а их идентифицирует отрицательное число или `rt`. Таким образом, обычные приоритеты отображаются верхним диапазоном от 0 до 39.
+Также можно постоянно отслеживать процессы, которыми в настоящее время управляет ядро Linux, с помощью программы `top`. Как и в случае с `ps`, `top` также по-другому отображает значение приоритета. Чтобы упростить идентификацию процессов в реальном времени, `top` уменьшает значение приоритета на 100, тем самым делая все приоритеты в реальном времени отрицательными, связывая их с отрицательным числом или `rt`. Таким образом, обычные приоритеты отображаются `top` в диапазоне от 0 до 39.
 
-> Чтобы получить более подробную информацию о команде `ps`, можно использовать дополнительные параметры. Сравните вывод этой команды с выводом из нашего предыдущего примера:  
+> Для получения более подробной информации от команды `ps`, можно использовать дополнительные параметры. Сравните вывод этой команды с выводом из нашего предыдущего примера:  
 ```console 
 $ ps -e -o user,uid,comm,tty,pid,ppid,pri,pmem,pcpu --sort=-pcpu | head
 ```
