Update 103.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
@@ -62,3 +62,17 @@ F S   UID   PID  PPID  C PRI  NI ADDR SZ WCHAN  TTY          TIME CMD
 > ```console
 > $ ps -e -o user,uid,comm,tty,pid,ppid,pri,pmem,pcpu --sort=-pcpu | head
 > ```
+
+## Изменение приоритета(фактора уступчивости) процессов
+
+Каждый нормальный процесс начинается со значения фактора уступчивости по умолчанию, равного 0(приоритет 120). Название `nice` происходит от идеи, что более уступчивые процессы позволяют другим процессам запускаться перед ними в определенной очереди выполнения. Фактор уступчивости варьируется от -20 (менее уступчивый, высокий приоритет) до 19 (более "уступчивый, низкий приоритет). Linux также позволяет назначать разные значения фактора уступчивости потокам в рамках одного процесса. Столбец `NI` в выводе `ps` указывает на `фактор уступчивости`. 
+
+Только пользователь root может снизить фактор уступчивости процесса ниже нуля. Можно запустить процесс с нестандартным приоритетом с помощью команды `nice`. По умолчанию `nice` меняет фактор уступчивости на 10, но его можно и указать с помощью параметра `-n`:
+```console
+$ nice -n 15 tar czf home_backup.tar.gz /home
+```
+В этом примере команда `tar` выполняется со значением фактора уступчивости равным 15. Команда `renice` может использоваться для изменения приоритета запущенного процесса. Параметр `-p` указывает значение PID целевого процесса. Например:
+```
+# renice -10 -p 2164
+2164 (process ID) old priority 0, new priority -10
+```
