Update 103.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
@@ -72,7 +72,44 @@ F S   UID   PID  PPID  C PRI  NI ADDR SZ WCHAN  TTY          TIME CMD
 $ nice -n 15 tar czf home_backup.tar.gz /home
 ```
 В этом примере команда `tar` выполняется со значением фактора уступчивости равным 15. Команда `renice` может использоваться для изменения приоритета запущенного процесса. Параметр `-p` указывает значение PID целевого процесса. Например:
-```
+```console
 # renice -10 -p 2164
 2164 (process ID) old priority 0, new priority -10
 ```
+Параметры `-g` и `-u` используются для изменения всех процессов определенной группы или пользователя соответственно. С помощью `renice +5 -g users` приоритет процессов, принадлежащих пользователям группы `users`, будет увеличено на пять. Помимо `renice`, приоритет процессов может быть изменен другими программами, например, программой `top`. На главном экране `top` можно изменить приоритет процесса, нажав `r`, а затем указать значение PID процесса:
+```console
+top - 11:55:21 up 23:38,  1 user,  load average: 0,10, 0,04, 0,05
+Tasks:  20 total,   1 running,  19 sleeping,   0 stopped,   0 zombie
+%Cpu(s):  0,5 us,  0,3 sy,  0,0 ni, 99,0 id,  0,0 wa,  0,2 hi,  0,0 si,  0,0 st
+KiB Mem :  4035808 total,   774700 free,  1612600 used,  1648508 buff/cache
+KiB Swap:  7999828 total,  7738780 free,   261048 used.  2006688 avail Mem
+PID to renice [default pid = 1]
+  PID USER      PR  NI    VIRT    RES    SHR S  %CPU  %MEM     TIME+ COMMAND
+    1 root      20   0   74232   7904   6416 S 0,000 0,196   0:00.12 systemd
+   15 root      20   0   67436   6144   5568 S 0,000 0,152   0:00.03 systemd-journal
+   21 root      20   0   61552   5628   5000 S 0,000 0,139   0:00.01 systemd-logind
+   22 message+  20   0   43540   4072   3620 S 0,000 0,101   0:00.03 dbus-daemon
+   23 root      20   0   45652   6204   4992 S 0,000 0,154   0:00.06 wickedd-dhcp4
+   24 root      20   0   45648   6276   5068 S 0,000 0,156   0:00.06 wickedd-auto4
+   25 root      20   0   45648   6272   5060 S 0,000 0,155   0:00.06 wickedd-dhcp6
+```
+Появляется сообщение `PID to renice [default pid = 1]` с выбранным по умолчанию первым процессом из списка. Чтобы изменить приоритет другого процесса, введите его PID и нажмите Enter. Затем появится сообщение `Renice PID 1 to value` (с запрошенным номером PID), и можно будет присвоить новое значение nice.
+
+# Упражнения для закрепления
+
+
+
+# Упражнения на размышление
+
+
+
+
+# Резюме
+
+
+
+
+# Ответы на упражнения для закрепления
+
+
+# Ответы на упражнения для размышления
