Update 103.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
@@ -150,15 +150,94 @@ renice: failed to set priority for 21704 (process ID): Permission denied
 
 # Упражнения на размышление
 
+1. Изменение приоритета процесса обычно требуется, когда процесс занимает слишком много времени CPU. При использовании `ps` со стандартными параметрами для вывода всех системных процессов в длинном формате, какой флаг `--sort` будет сортировать процессы по загрузке CPU в порядке возрастания? 
 
+2. Команда `schedtool` может устанавливать все параметры планирования CPU, которые поддерживает Linux, или отображать информацию для заданных процессов. Как его можно использовать для отображения параметров планирования процесса `1750`? Кроме того, как можно использовать `schedtool` для изменения процесса 1750 в режиме реального времени с приоритетом -90 (как вывел `top`)?
 
 
 # Резюме
 
-
+В этом уроке рассказывается, как Linux распределяет процессорное время между своими управляемыми процессами. Чтобы обеспечить лучшую производительность, более важные процессы должны быть приоритетнее менее важных процессов. Урок состоит из следующих этапов: 
+* Основные понятия о многопроцессорных системах. 
+* Что такое планировщик процессов и как Linux его реализует. 
+* Какие существуют приоритеты Linux,  значения nice и их назначение. 
+* Как читать и интерпретировать приоритеты процессов в Linux. 
+* Как изменить приоритет процесса до и во время его выполнения.
 
 
 # Ответы на упражнения для закрепления
 
+1. Что происходит в многозадачной системе с вытеснением, когда процесс с более низким приоритетом занимает процессор, а процесс с более высоким приоритетом ставится в очередь на выполнение?
+
+Процесс с более низким приоритетом приостанавливается, и вместо него выполняется процесс с более высоким приоритетом.
+
+2. Рассмотрим следующий экран `top`:
+```console
+top - 08:43:14 up 23 days, 12:29,  5 users,  load average: 0,13, 0,18, 0,21
+Tasks: 240 total,   2 running, 238 sleeping,   0 stopped,   0 zombie
+%Cpu(s):  1,4 us,  0,4 sy,  0,0 ni, 98,1 id,  0,0 wa,  0,0 hi,  0,0 si,  0,0 st
+MiB Mem :   7726,4 total,    590,9 free,   1600,8 used,   5534,7 buff/cache
+MiB Swap:  30517,0 total,  30462,5 free,     54,5 used.   5769,4 avail Mem
+
+  PID USER      PR  NI    VIRT    RES    SHR S  %CPU  %MEM     TIME+ COMMAND
+    1 root      20   0  171420  10668   7612 S   0,0   0,1   9:59.15 systemd
+    2 root      20   0       0      0      0 S   0,0   0,0   0:02.76 kthreadd
+    3 root       0 -20       0      0      0 I   0,0   0,0   0:00.00 rcu_gp
+    4 root       0 -20       0      0      0 I   0,0   0,0   0:00.00 rcu_par_gp
+    8 root       0 -20       0      0      0 I   0,0   0,0   0:00.00 mm_percpu_wq
+    9 root      20   0       0      0      0 S   0,0   0,0   0:49.06 ksoftirqd/0
+   10 root      20   0       0      0      0 I   0,0   0,0  18:24.20 rcu_sched
+   11 root      20   0       0      0      0 I   0,0   0,0   0:00.00 rcu_bh
+   12 root      rt   0       0      0      0 S   0,0   0,0   0:08.17 migration/0
+   14 root      20   0       0      0      0 S   0,0   0,0   0:00.00 cpuhp/0
+   15 root      20   0       0      0      0 S   0,0   0,0   0:00.00 cpuhp/1
+   16 root      rt   0       0      0      0 S   0,0   0,0   0:11.79 migration/1
+   17 root      20   0       0      0      0 S   0,0   0,0   0:26.01 ksoftirqd/1
+```
+Какие PID имеют приоритеты в реальном времени?
+
+PIDы 12 и 16.
+
+3. Рассмотрим следующий листинг `ps -el`:
+```console
+F S   UID   PID  PPID  C PRI  NI ADDR SZ WCHAN  TTY          TIME CMD
+4 S     0     1     0  0  80   0 - 42855 -      ?        00:09:59 systemd
+1 S     0     2     0  0  80   0 -     0 -      ?        00:00:02 kthreadd
+1 I     0     3     2  0  60 -20 -     0 -      ?        00:00:00 rcu_gp
+1 S     0     9     2  0  80   0 -     0 -      ?        00:00:49 ksoftirqd/0
+1 I     0    10     2  0  80   0 -     0 -      ?        00:18:26 rcu_sched
+1 I     0    11     2  0  80   0 -     0 -      ?        00:00:00 rcu_bh
+1 S     0    12     2  0 -40   - -     0 -      ?        00:00:08 migration/0
+1 S     0    14     2  0  80   0 -     0 -      ?        00:00:00 cpuhp/0
+5 S     0    15     2  0  80   0 -     0 -      ?        00:00:00 cpuhp/1
+```
+Какой PID имеет более высокий приоритет?
+
+PID 12.
+
+4. После попытки переименовать процесс с помощью renice возникает следующая ошибка:
+```console
+$ renice -10 21704
+renice: failed to set priority for 21704 (process ID): Permission denied
+```
+Какова вероятная причина ошибки?
+
+Только пользователь root может уменьшить значение фактора уступчивости ниже нуля.
+
 
 # Ответы на упражнения для размышления
+
+1. Изменение приоритета процесса обычно требуется, когда процесс занимает слишком много времени CPU. При использовании `ps` со стандартными параметрами для вывода всех системных процессов в длинном формате, какой флаг `--sort` будет сортировать процессы по загрузке CPU в порядке возрастания? 
+
+```console
+$ ps -el --sort=pcpu
+```
+
+2. Команда `schedtool` может устанавливать все параметры планирования CPU, которые поддерживает Linux, или отображать информацию для заданных процессов. Как его можно использовать для отображения параметров планирования процесса `1750`? Кроме того, как можно использовать `schedtool` для изменения процесса 1750 в режиме реального времени с приоритетом -90 (как вывел `top`)?
+
+```console
+$ schedtool 1750
+```
+```console
+$ schedtool -R -p 89 1750
+```
