--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -21,9 +21,9 @@
 каждый раздел привязан к каталогу в `/dev`, например `/dev/sda1` или `/dev/sda2`.
 
 В этом уроке вы узнаете, как создавать, удалять, восстанавливать и изменять размер
-разделов с помощью трех наиболее распространенных утилит (fdisk, gdisk и parted), 
-как создать на них файловую систему и как создать и настроить раздел подкачки или 
-файл подкачки для использования в качестве виртуальной памяти.
+разделов с помощью трех наиболее распространенных утилит (`fdisk`, `gdisk` и `parted`), 
+как создать на них файловую систему и как создать и настроить `раздел подкачки` или 
+`файл подкачки` для использования их в качестве виртуальной памяти.
 
 >По историческим причинам в этом уроке мы будем называть носители данных «дисками», 
 >хотя современные системы хранения, такие как твердотельные накопители и 
@@ -36,34 +36,34 @@
 это MBR (*Master Boot Record*), а второй - это GPT (*GUID Partition Table*).
 
 MBR
-Это пережиток первых дней MS-DOS (точнее, PC-DOS 2.0 с 1983 года) и на протяжении
+	Это пережиток первых дней MS-DOS(точнее, PC-DOS 2.0 с 1983 года) и на протяжении
 десятилетий был стандартной схемой разделения на ПК. Таблица разделов хранится в 
-первом секторе диска, называемом загрузочным сектором, вместе с загрузчиком, 
-которым в системах Linux обычно является загрузчик GRUB. Но MBR имеет ряд 
+первом секторе диска, называемом *загрузочным сектором*, вместе с загрузчиком, 
+которым в системах Linux обычно является загрузчик *GRUB*. Но MBR имеет ряд 
 ограничений, которые препятствуют его использованию в современных системах, 
-например невозможность адресовать диски размером более 2 ТБ и ограничение в 4 
+например невозможность адресовать диски размером более 2 ТБ и ограничение до 4 
 основных раздела на диск.
 
 GPT
-Система разделения, которая устраняет многие ограничения MBR. Практического 
+	Система разделения, которая устраняет многие ограничения MBR. Практического 
 ограничения на размер диска нет, а максимальное количество разделов ограничено 
-только самой операционной системой. Это чаще встречается на более современных 
-машинах, которые используют UEFI вместо старого BIOS ПК.
+только самой операционной системой. Она чаще встречается на более современных 
+машинах, которые используют UEFI вместо старого BIOS.
 
-Во время задач системного администрирования весьма вероятно, что вы обнаружите, что обе схемы используются, поэтому важно знать, как использовать инструменты, связанные с каждой из них, для создания, удаления или изменения разделов.
+Во время задач системного администрирования весьма вероятно, что вы обнаружите, что используются обе схемы, поэтому важно знать, как использовать инструменты, связанные с каждой из них для создания, удаления или изменения разделов.
 
 
 # Управление разделами MBR с помощью FDISK
 
 Стандартная утилита для управления разделами MBR в Linux - `fdisk`. Это интерактивная утилита с меню. Чтобы использовать его, введите `fdisk`, а затем имя устройства, соответствующего диску, который вы хотите редактировать. Например, команда
-```
+```console
 # fdisk /dev/sda
 ```
-будет редактировать таблицу разделов первого устройства, подключенного к SATA (sda) в системе. Имейте в виду, что вам нужно указать устройство, соответствующее физическому диску, а не одному из его разделов (например, `/dev/sda1`).
->Все операции с дисками в этом уроке должны выполняться от имени пользователя root (системного администратора) или с правами root с помощью `sudo`.
+будет редактировать таблицу разделов первого устройства, подключенного к SATA (`sda`) в системе. Имейте в виду, что вам нужно указать устройство, соответствующее физическому диску, а не одному из его разделов (например, `/dev/sda1`).
+>Все операции с дисками в этом уроке должны выполняться от имени пользователя `root` (системного администратора) или с правами root с помощью `sudo`.
 
-При вызове fdisk покажет приветствие, затем предупреждение и будет ждать ваших команд.
-```
+При вызове `fdisk` покажет приветствие, затем предупреждение и будет ждать ваших команд.
+```console
 # fdisk /dev/sda
 Welcome to fdisk (util-linux 2.33.1).
 Changes will remain in memory only, until you decide to write them.
@@ -71,14 +71,13 @@ Be careful before using the write command.
 
 Command (m for help):
 ```
-Предупреждение важно. Вы можете создавать, редактировать или удалять разделы по своему желанию, но ничего не будет записано на диск, если вы не используете команду write (`w`). Таким образом, вы можете «практиковаться» без риска потери данных, пока не нажимаете клавишу `w`. Чтобы выйти из `fdis`k без сохранения изменений, используйте команду `q`.
+Предупреждение важно. Вы можете создавать, редактировать или удалять разделы по своему желанию, но `ничего` не будет записано на диск, если вы не используете команду write (`w`). Таким образом, вы можете «практиковаться» без риска потери данных, пока не нажимаете клавишу `w`. Чтобы выйти из `fdis`k без сохранения изменений, используйте команду `q`.
 >При этом никогда не следует практиковаться на важном диске, поскольку всегда есть риски. Вместо этого используйте запасной внешний диск или USB-накопитель.
 
+## Вывод текущей таблицы разделов
 
-# Вывод текущей таблицы разделов
-
-Команда `p` используется для печати текущей таблицы разделов. Результат будет примерно таким:
-```
+Команда `p` используется для вывода текущей таблицы разделов. Результат будет примерно таким:
+```console
 Command (m for help): p
 Disk /dev/sda: 111.8 GiB, 120034123776 bytes, 234441648 sectors
 Disk model: CT120BX500SSD1
@@ -93,7 +92,8 @@ Device     Boot     Start       End   Sectors   Size Id Type
 /dev/sda2       226048944 234437550   8388607     4G 82 Linux swap / Solaris
 ```
 Вот значение каждого столбца:
-* `Device` - Устройство, назначенное разделу.
+`Device`
+	Устройство, назначенное разделу.
 * `Boot` - Показывает, является ли раздел загрузочным.
 * `Start` - Сектор, в котором начинается раздел.
 * `End` - Сектор, в котором заканчивается раздел.
