Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -8,41 +8,24 @@
 | Урок:         | 1 из 1                                      |
 
 
-# Введение
+## Введение
 
-В любой операционной системе перед использованием диск необходимо разбить на разделы.
-Раздел - это логическое подмножество физического диска, и информация о разделах 
-хранится в таблице разделов. Эта таблица включает информацию о первом и последнем 
+В любой операционной системе перед использованием диск необходимо разбить на разделы. Раздел - это логическое подмножество физического диска, и информация о разделах хранится в таблице разделов. Эта таблица включает информацию о первом и последнем 
 секторах раздела и его типе, а также дополнительные сведения о каждом разделе.
 
-Обычно каждый раздел рассматривается операционной системой как отдельный «диск», 
-даже если все они находятся на одном физическом носителе. В системах Windows им 
-присваиваются такие буквы, как `C:` (исторически основной диск), `D:` и так далее. В Linux
-каждый раздел привязан к каталогу в `/dev`, например `/dev/sda1` или `/dev/sda2`.
+Обычно каждый раздел рассматривается операционной системой как отдельный «диск», даже если все они находятся на одном физическом носителе. В системах Windows им присваиваются такие буквы, как `C:` (исторически основной диск), `D:` и так далее. В Linux каждый раздел привязан к каталогу в `/dev`, например `/dev/sda1` или `/dev/sda2`.
 
-В этом уроке вы узнаете, как создавать, удалять, восстанавливать и изменять размер
-разделов с помощью трех наиболее распространенных утилит (`fdisk`, `gdisk` и `parted`), 
-как создать на них файловую систему и как создать и настроить `раздел подкачки` или 
-`файл подкачки` для использования их в качестве виртуальной памяти.
+В этом уроке вы узнаете, как создавать, удалять, восстанавливать и изменять размер разделов с помощью трех наиболее распространенных утилит (`fdisk`, `gdisk` и `parted`), как создать на них файловую систему и как создать и настроить `раздел подкачки` или `файл подкачки` для использования их в качестве виртуальной памяти.
 
->По историческим причинам в этом уроке мы будем называть носители данных «дисками», 
->хотя современные системы хранения, такие как твердотельные накопители и 
->флэш-накопители, вообще не содержат никаких «дисков».
+>По историческим причинам в этом уроке мы будем называть носители данных «дисками», хотя современные системы хранения, такие как твердотельные накопители и флэш-накопители, вообще не содержат никаких «дисков».
 
 
-# Понимание MBR и GPT
+## Понимание MBR и GPT
 
-Есть два основных способа хранения информации о разделах на жестких дисках. Первый - 
-это MBR (*Master Boot Record*), а второй - это GPT (*GUID Partition Table*).
+Есть два основных способа хранения информации о разделах на жестких дисках. Первый - это MBR (*Master Boot Record*), а второй - это GPT (*GUID Partition Table*).
 
-MBR  
-	Это пережиток первых дней MS-DOS(точнее, PC-DOS 2.0 с 1983 года) и на протяжении
-десятилетий был стандартной схемой разделения на ПК. Таблица разделов хранится в 
-первом секторе диска, называемом *загрузочным сектором*, вместе с загрузчиком, 
-которым в системах Linux обычно является загрузчик *GRUB*. Но MBR имеет ряд 
-ограничений, которые препятствуют его использованию в современных системах, 
-например невозможность адресовать диски размером более 2 ТБ и ограничение до 4 
-основных раздела на диск.
+	MBR  
+	Это пережиток первых дней MS-DOS(точнее, PC-DOS 2.0 с 1983 года) и на протяжении десятилетий был стандартной схемой разделения на ПК. Таблица разделов хранится в первом секторе диска, называемом *загрузочным сектором*, вместе с загрузчиком, которым в системах Linux обычно является загрузчик *GRUB*. Но MBR имеет ряд ограничений, которые препятствуют его использованию в современных системах, например невозможность адресовать диски размером более 2 ТБ и ограничение до 4 основных раздела на диск.
 
 GPT  
 	Система разделения, которая устраняет многие ограничения MBR. Практического 
@@ -53,7 +36,7 @@ GPT
 Во время задач системного администрирования весьма вероятно, что вы обнаружите, что используются обе схемы, поэтому важно знать, как использовать инструменты, связанные с каждой из них для создания, удаления или изменения разделов.
 
 
-# Управление разделами MBR с помощью FDISK
+### Управление разделами MBR с помощью FDISK
 
 Стандартная утилита для управления разделами MBR в Linux - `fdisk`. Это интерактивная утилита с меню. Чтобы использовать его, введите `fdisk`, а затем имя устройства, соответствующего диску, который вы хотите редактировать. Например, команда
 ```console
@@ -74,7 +57,7 @@ Command (m for help):
 Предупреждение важно. Вы можете создавать, редактировать или удалять разделы по своему желанию, но `ничего` не будет записано на диск, если вы не используете команду write (`w`). Таким образом, вы можете «практиковаться» без риска потери данных, пока не нажимаете клавишу `w`. Чтобы выйти из `fdis`k без сохранения изменений, используйте команду `q`.
 >При этом никогда не следует практиковаться на важном диске, поскольку всегда есть риски. Вместо этого используйте запасной внешний диск или USB-накопитель.
 
-## Вывод текущей таблицы разделов
+### Вывод текущей таблицы разделов
 
 Команда `p` используется для вывода текущей таблицы разделов. Результат будет примерно таким:
 ```console
@@ -103,7 +86,7 @@ Device     Boot     Start       End   Sectors   Size Id Type
 * `Type` - Описание типа раздела.
 
 
-# Основной или расширеный разделы
+### Основной или расширеный разделы
 
 На MBR-диске может быть 2 основных типа разделов: *primary* и *extended*. Как мы уже говорили, у вас может быть только 4 основных раздела на диске, и если вы хотите сделать диск «загрузочным», первый раздел должен быть основным. 
 
@@ -129,7 +112,7 @@ Last sector, +/-sectors or +/-size{K,M,G,T,P} (2048-3903577, default 3903577): +
 ```
 
 
-# Проверка на незанятое пространство
+### Проверка на незанятое пространство
 
 Если вы не знаете, сколько свободного места на диске, вы можете использовать команду `F`, чтобы показать нераспределенное пространство, например:
 ```
@@ -143,14 +126,14 @@ Sector size (logical/physical): 512 bytes / 512 bytes
 ```
 
 
-# Удаление разделов
+### Удаление разделов
 
 Чтобы удалить раздел, используйте команду `d`. `fdisk` спросит у вас номер раздела, который вы хотите удалить, если на диске нет только одного раздела. В этом случае этот раздел будет выбран и немедленно удален.
 
 Имейте в виду, что если вы удалите расширенный раздел, все логические разделы внутри него также будут удалены.
 
 
-# Обратите внимание на разрыв!
+### Обратите внимание на разрыв!
 
 Имейте в виду, что при создании нового раздела с помощью fdisk максимальный размер будет ограничен максимальным объемом непрерывного нераспределенного пространства на диске. Скажем, например, что у вас есть следующая карта разделов:
 ```
