Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -24,7 +24,7 @@
 
 Есть два основных способа хранения информации о разделах на жестких дисках. Первый - это MBR (*Master Boot Record*), а второй - это GPT (*GUID Partition Table*).
 
-	MBR  
+* MBR  
 	Это пережиток первых дней MS-DOS(точнее, PC-DOS 2.0 с 1983 года) и на протяжении десятилетий был стандартной схемой разделения на ПК. Таблица разделов хранится в первом секторе диска, называемом *загрузочным сектором*, вместе с загрузчиком, которым в системах Linux обычно является загрузчик *GRUB*. Но MBR имеет ряд ограничений, которые препятствуют его использованию в современных системах, например невозможность адресовать диски размером более 2 ТБ и ограничение до 4 основных раздела на диск.
 
 GPT  
