--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -27,11 +27,8 @@
 * MBR  
 	Это пережиток первых дней MS-DOS(точнее, PC-DOS 2.0 с 1983 года) и на протяжении десятилетий был стандартной схемой разделения на ПК. Таблица разделов хранится в первом секторе диска, называемом *загрузочным сектором*, вместе с загрузчиком, которым в системах Linux обычно является загрузчик *GRUB*. Но MBR имеет ряд ограничений, которые препятствуют его использованию в современных системах, например невозможность адресовать диски размером более 2 ТБ и ограничение до 4 основных раздела на диск.
 
-GPT  
-	Система разделения, которая устраняет многие ограничения MBR. Практического 
-ограничения на размер диска нет, а максимальное количество разделов ограничено 
-только самой операционной системой. Она чаще встречается на более современных 
-машинах, которые используют UEFI вместо старого BIOS.
+* GPT  
+	Система разделения, которая устраняет многие ограничения MBR. Практического ограничения на размер диска нет, а максимальное количество разделов ограничено только самой операционной системой. Она чаще встречается на более современных машинах, которые используют UEFI вместо старого BIOS.
 
 Во время задач системного администрирования весьма вероятно, что вы обнаружите, что используются обе схемы, поэтому важно знать, как использовать инструменты, связанные с каждой из них для создания, удаления или изменения разделов.
 
@@ -75,7 +72,7 @@ Device     Boot     Start       End   Sectors   Size Id Type
 /dev/sda2       226048944 234437550   8388607     4G 82 Linux swap / Solaris
 ```
 Вот значение каждого столбца:
-`Device`
+* `Device`
 	Устройство, назначенное разделу.
 * `Boot` - Показывает, является ли раздел загрузочным.
 * `Start` - Сектор, в котором начинается раздел.
