--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -24,7 +24,7 @@
 
 Есть два основных способа хранения информации о разделах на жестких дисках. Первый - это MBR (*Master Boot Record*), а второй - это GPT (*GUID Partition Table*).
 
-* MBR  
+* MBR
 	Это пережиток первых дней MS-DOS(точнее, PC-DOS 2.0 с 1983 года) и на протяжении десятилетий был стандартной схемой разделения на ПК. Таблица разделов хранится в первом секторе диска, называемом *загрузочным сектором*, вместе с загрузчиком, которым в системах Linux обычно является загрузчик *GRUB*. Но MBR имеет ряд ограничений, которые препятствуют его использованию в современных системах, например невозможность адресовать диски размером более 2 ТБ и ограничение до 4 основных раздела на диск.
 
 * GPT  
@@ -76,13 +76,23 @@ Device     Boot     Start       End   Sectors   Size Id Type
 	Устройство, назначенное разделу.
 * `Boot`  
 	Показывает, является ли раздел загрузочным.
-* `Start` - Сектор, в котором начинается раздел.
-* `End` - Сектор, в котором заканчивается раздел.
-* `Sectors` - Общее количество секторов в разделе. Умножьте его на размер сектора, чтобы получить размер раздела в байтах.
-* `Size` - Размер раздела в формате, удобном для чтения. В приведенном выше примере значения указаны в гигабайтах.
-* `Id` - Числовое значение, представляющее тип раздела.
-* `Type` - Описание типа раздела.
+* `Start` 
+	Сектор, в котором начинается раздел.
 
+* `End` 
+	Сектор, в котором заканчивается раздел.
+
+* `Sectors` 
+	Общее количество секторов в разделе. Умножьте его на размер сектора, чтобы получить размер раздела в байтах.
+
+* `Size`
+	Размер раздела в формате, удобном для чтения. В приведенном выше примере значения указаны в гигабайтах.
+
+* `Id` 
+	Числовое значение, представляющее тип раздела.
+
+* `Type`
+	Описание типа раздела.
 
 ### Основной или расширеный разделы
 
