Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -177,11 +177,11 @@ Value out of range.
 >Разделы Linux относятся к типу `83`(Linux). Разделы подкачки имеют тип `82`(Linux Swap).
 
 
-## Настройка разделов GPT с помощью GDISK
+### Настройка разделов GPT с помощью GDISK
 
 Утилита `gdisk` является эквивалентом `fdisk` при работе с дисками с разделами GPT. Фактически, интерфейс смоделирован по образцу `fdisk` с интерактивной подсказкой и такими же(или очень похожими) командами.
 
-### Вывод текущей таблицы разделов
+#### Вывод текущей таблицы разделов
 
 Команда `p` используется для вывода текущей таблицы разделов. Результат будет примерно таким:
 ```console
@@ -206,12 +206,11 @@ Number  Start (sector)    End (sector)  Size       Code  Name
 * Видите фразу `Partition table holds up to 128 entries?` Правильно, на GPT-диске может быть до 128 разделов. Благодаря этому нет необходимости в *primary* и *extended* разделах.
 * Свободное пространство указано в последней строке, поэтому нет необходимости в эквиваленте команды `F` из `fdisk`.
 
-### Создание раздела
+#### Создание раздела
 
 Команда для создания раздела - `n`, как и в `fdisk`. Основное отличие состоит в том, что помимо номера раздела и первого и последнего секторов (или размера) вы также можете указать тип раздела во время создания. Разделы GPT поддерживают гораздо больше типов, чем MBR. Вы можете проверить список всех поддерживаемых типов с помощью команды `L`.
 
-
-### Удаление раздела
+#### Удаление раздела
 
 Чтобы удалить раздел, введите `d` и номер раздела. В отличие от `fdisk`, первый раздел не будет автоматически выбран, если он единственный на диске. На GPT-дисках разделы можно легко переупорядочить или «отсортировать», чтобы избежать пробелов в последовательности нумерации. Для этого просто используйте команду `s`. Например, представьте себе диск со следующей таблицей разделов:
 ```console
@@ -234,11 +233,11 @@ Number  Start (sector)    End (sector)  Size       Code  Name
 ```
 Обратите внимание, что третий раздел стал вторым.
 
-### Gap? что за Gap?
+#### Gap? что за Gap?
 
 В отличие от дисков MBR, при создании раздела на дисках GPT размер не ограничивается максимальным объемом *непрерывного* нераспределенного пространства. Вы можете использовать каждый последний бит свободного сектора, независимо от того, где он находится на диске.
 
-### Варианты восстановления
+#### Варианты восстановления
 
 На дисках GPT хранятся резервные копии заголовка GPT и таблицы разделов, что упрощает восстановление дисков в случае повреждения этих данных. `gdisk` предоставляет функции для помощи в этих задачах восстановления, доступ к которым осуществляется с помощью команды `r`.
 
