Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -501,7 +501,7 @@ Welcome to GNU Parted! Type 'help' to view a list of commands.
 ```
 >Будь осторожен! Если вы не укажете устройство, parted автоматически выберет основной диск (обычно `/dev/sda`) для работы.
 
-## Выбор дисков
+### Выбор дисков
 
 Чтобы переключиться на диск, отличный от того, который указан в командной строке, вы можете использовать команду `select`, за которой следует имя устройства:
 ```
@@ -509,7 +509,7 @@ Welcome to GNU Parted! Type 'help' to view a list of commands.
 Using /dev/sdb
 ```
 
-## Получение информации
+### Получение информации
 
 Команду `print` можно использовать для получения дополнительной информации о конкретном разделе или даже обо всех блочных устройствах (дисках), подключенных к вашей системе.
 
@@ -551,7 +551,7 @@ Number  Start   End     Size    Type     File system     Flags
         120GB   120GB   2098kB           Free Space
 ```
 
-## Создание таблицы разделов на пустом диске
+### Создание таблицы разделов на пустом диске
 
 Чтобы создать таблицу разделов на пустом диске, используйте команду `mklabel`, а затем укажите тип таблицы разделов, который вы хотите использовать.
 
@@ -564,8 +564,7 @@ Number  Start   End     Size    Type     File system     Flags
 (parted) mklabel gpt
 ```
 
-
-## Создание раздела
+### Создание раздела
 
 Для создания раздела используется команда `mkpart` с синтаксисом `mkpart PARTTYPE FSTYPE START END`, где:
 
@@ -580,13 +579,11 @@ Number  Start   End     Size    Type     File system     Flags
 ```
 Создает первичный раздел типа `ext4`, начиная с первого мегабайта диска и заканчивая 100-м мегабайтом.
 
-
-## Удаление раздела
+### Удаление раздела
 
 Чтобы удалить раздел, используйте команду `rm`, за которой следует номер раздела, который можно отобразить с помощью команды `print`. Таким образом, `rm 2` удалит второй раздел на текущем выбранном диске.
 
-
-## Восстановление разделов
+### Восстановление разделов
 
 `parted` может восстановить удаленный раздел. Предположим, у вас есть следующая структура разделов:
 ```
@@ -607,8 +604,7 @@ Yes/No/Cancel? y
 ```
 Это восстановит раздел и его содержимое. Обратите внимание, что `rescue` может восстанавливать только разделы, на которых установлена файловая система. Пустые разделы не обнаруживаются.
 
-
-## Изменение размера разделов ext2/3/4
+### Изменение размера разделов ext2/3/4
 
 `parted` можно использовать для изменения размера разделов, чтобы сделать их больше или меньше. Однако есть некоторые предостережения:
 * Во время изменения размера раздел должен быть неиспользованным и отключенным. 
@@ -706,7 +702,7 @@ Number  Start   End     Size    File system  Name     Flags
 ```
 >Вместо того, чтобы указывать новый размер, вы можете использовать параметр `-M` для `resize2fs`, чтобы настроить размер файловой системы, чтобы она была достаточно большой для файлов на ней.
 
-## Создание разделов подкачки
+### Создание разделов подкачки
 
 В Linux система может переставлять страницы памяти из ОЗУ на диск по мере необходимости, сохраняя их в отдельном пространстве, обычно реализованном как отдельный раздел на диске, который называется *swap partition*(разделом подкачки) или просто swap. Этот раздел должен быть определенного типа и настроен с помощью соответствующей утилиты (`mkswap`), прежде чем его можно будет использовать.
 
