Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -800,23 +800,23 @@ Device     Boot   Start     End Sectors  Size Id Type
 
 ## Ответы на упражнения для закрепления
 
-**1. Какую схему разделения следует использовать для разделения жесткого диска емкостью 3 ТБ на три раздела по 1 ГБ? Почему?
+**1. Какую схему разделения следует использовать для разделения жесткого диска емкостью 3 ТБ на три раздела по 1 ГБ? Почему?**
 
 >GPT, поскольку MBR поддерживает жесткие диски не более 2 ТБ.
 
-**2. Используя `gdisk`, как мы можем узнать, сколько места доступно на диске?
+**2. Используя `gdisk`, как мы можем узнать, сколько места доступно на диске?**
 
 >Используйте `p` (print). Общее свободное пространство будет отображаться в последней строке информации перед самой таблицей разделов.
 
-**3. Какой была бы команда для создания файловой системы ext3, предварительно проверяя наличие плохих блоков, с меткой `MyDisk` и случайным UUID на устройстве `/dev/sdc1`?
+**3. Какой была бы команда для создания файловой системы ext3, предварительно проверяя наличие плохих блоков, с меткой `MyDisk` и случайным UUID на устройстве `/dev/sdc1`?**
 
 >Команда будет выглядеть так: `mkfs.ext3 -c -L MyDisk -U random /dev/sdc1`. В качестве альтернативы вместо `mkfs.ext3` можно использовать `mk2efs -t ext3`.
 
-**4. Используя `parted`, какова команда для создания раздела ext4 размером 300 МБ, начиная с 500 МБ на диске?
+**4. Используя `parted`, какова команда для создания раздела ext4 размером 300 МБ, начиная с 500 МБ на диске?**
 
 >Используйте `mkpart primary ext4 500m 800m`. Помните, что вам придется создать файловую систему с помощью `mkfs.ext4`, поскольку parted этого не делает.
 
-**5. Представьте, что у вас есть 2 раздела, один на `/dev/sda1`, а другой на `/dev/sda2`, размером 20 ГБ. Как вы можете использовать их в одной файловой системе Btrfs таким образом, чтобы содержимое одного раздела автоматически отображалось на другом, как при настройке RAID1? Насколько большой будет файловая система?
+**5. Представьте, что у вас есть 2 раздела, один на `/dev/sda1`, а другой на `/dev/sda2`, размером 20 ГБ. Как вы можете использовать их в одной файловой системе Btrfs таким образом, чтобы содержимое одного раздела автоматически отображалось на другом, как при настройке RAID1? Насколько большой будет файловая система?**
 
 >Используйте `mkfs.btrfs /dev/sda1 /dev/sdb1 -m raid1`. В результате файловая система будет размером 20 ГБ, так как один раздел действует просто как зеркало другого.
 
